# VideosFlow

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: dev-plan-next.md  dev-plan.md  film-module-complete-flow.md  film-module-v2-design.md  m2-film-design.md  m2.5-film-script-gen-design.md  m3-spoken-design.md  m4-creation-design.md  technical-solution.md
preview/: prototype.html
python-sidecar/: main.py  models.py  pyproject.toml  requirements.txt  to_simplified.py  transcribe.py
python-sidecar/gateways/: __init__.py  agnes.py  base.py  mimo.py
python-sidecar/routers/: ping.py  providers.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  cred.rs  db.rs  ffmpeg.rs  fileserver.rs  lib.rs  main.rs  python.rs  tasks.rs
src/components/: ErrorBoundary.tsx  ExportModal.tsx  FlowerPreview.tsx  GenProgress.tsx  NarrationFlowModal.tsx  StoryboardWorkbench.tsx  TimelineEditor.tsx  icons.tsx
src/components/film/: FilmStepper.tsx  Step1Splash.tsx  Step2PickStyle.tsx  Step3UploadVideo.tsx  Step4VideoRange.tsx  Step5Narration.tsx  Step6DubAndCut.tsx  VideoAnalysisModal.tsx
src/data/: mock.ts
src/ipc/: client.ts  providers.ts  types.ts
src/lib/: jianying.ts
src/modules/: Creation.tsx  Film.tsx  Settings.tsx  Spoken.tsx
src/state/: AppContext.tsx
src/styles/: global.css
