[project]
name = "videosflow-sidecar"
version = "0.1.0"
description = "VideosFlow Python sidecar — 双网关轻量转发（Agnes LLM/图像/视频 + XiaomiMimo TTS）"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.115.5",
    "uvicorn[standard]==0.34.0",
    "httpx==0.28.1",
    "pydantic==2.10.3",
    "python-dotenv==1.0.1",
]

[tool.setuptools]
py-modules = ["main", "models"]
