[package]
name = "videosflow"
version = "0.1.0"
description = "VideosFlow 桌面端智能视频生产工作室"
authors = ["大BOOS"]
edition = "2021"

[lib]
name = "videosflow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync", "rt-multi-thread", "macros", "time"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
uuid = { version = "1", features = ["v4"] }
tauri-plugin-dialog = "2"
base64 = "0.22"
aes-gcm = "0.10"
rand = "0.8"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
